# base-app-template

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: python-ci.yml
src/agent/: graph.py
