[tool.poetry]
name = "base-app"
version = "0.1.0"
description = ""
authors = ["Sven Duve <svenduve@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11,<4.0"
langgraph = "^0.3.31"
python-dotenv = "^1.1.0"

[tool.poetry.group.dev.dependencies]
flake8 = "^7.0.0"
langgraph-cli = {extras = ["inmem"], version = "^0.2.5"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
